envoy/envoy.json
{
    "listeners": [
      {
        "name": "http-ingress",
        "address": "tcp://0.0.0.0:80",
        "filters": [
          {
            "type": "read",
            "name": "http_connection_manager",
            "config": {
              "codec_type": "auto",
              "stat_prefix": "ingress-http",
              "route_config": {
                "virtual_hosts": [
                  {
                    "name": "node-app-service",
                    "domains": [ "*" ],
                    "routes": [
                      {
                        "timeout_ms": 0,
                        "prefix": "/",
                        "cluster": "local-service"
                      }
                    ]
                  }
                ]
              },
              "filters": [
                {
                  "type": "both",
                  "name": "health_check",
                  "config": {
                    "pass_through_mode": true,
                    "endpoint": "/healthz",
                    "cache_time_ms": 1000
                  }
                },
                {
                  "type": "decoder",
                  "name": "router",
                  "config": {}
                }
              ]
            }
          }
        ]
      }
    ],
    "admin": {
      "access_log_path": "/dev/null",
      "address": "tcp://127.0.0.1:9999"
    },
    "cluster_manager": {
      "clusters": [
        {
          "name": "local-service",
          "connect_timeout_ms": 250,
          "type": "static",
          "lb_type": "round_robin",
          "hosts": [
            {
              "url": "tcp://127.0.0.1:8080"
            }
          ]
        }
      ]
    }
  }
